@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2008, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2009, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,15 +27,17 @@
  * --------------------------------------------
  * DynamicDriveToolTipTagFragmentGenerator.java
  * --------------------------------------------
- * (C) Copyright 2003-2008, by Richard Atkinson and Contributors.
+ * (C) Copyright 2003-2009, by Richard Atkinson and Contributors.
  *
  * Original Author:  Richard Atkinson;
  * Contributors:     David Gilbert (for Object Refinery Limited);
+ *                   Fawad Halim - bug 2690293;
  *
  * Changes
  * -------
  * 12-Aug-2003 : Version 1 (RA);
  * 04-Dec-2007 : Escape tool tip text to fix bug 1400917 (DG);
+ * 19-Mar-2009 : Escape apostrophes - see bug 2690293 with fix by FH (DG);
  *
  */
 
@@ -83,8 +85,8 @@ public class DynamicDriveToolTipTagFragmentGenerator
      */
     public String generateToolTipFragment(String toolTipText) {
         return " onMouseOver=\"return stm(['"
-            + ImageMapUtilities.htmlEscape(this.title) + "','"
-            + ImageMapUtilities.htmlEscape(toolTipText) + "'],Style["
+            + ImageMapUtilities.javascriptEscape(this.title) + "','"
+            + ImageMapUtilities.javascriptEscape(toolTipText) + "'],Style["
             + this.style + "]);\"" + " onMouseOut=\"return htm();\"";
     }
 
